--- a/quickstart.html
+++ b/quickstart.html
@@ -139,9 +139,8 @@ texts: compatibility
         <h1 class="text-center mb-5">Installing the firmware</h1>
         <p>Some games require the system modules be present for Vita3K to (low level) emulate them. This can be done by installing the PS Vita firmware through Vita3K.</p>
         <p>The firmware can be downloaded from the official <a href="https://www.playstation.com/en-us/support/system-updates/ps-vita/">Playstation website</a>,
-        BUT, Sony only provides one part of the full firmware on their website since they don't update the other part as much.</p>
-        <p>So, the solution for this is to acquire the other part from a <a href="https://archive.midnightchannel.net/SonyPS/Firmware/?cat=psv">3rd party</a>.
-        Make sure to download the "systemdata" part.</p>
-        <p>And install <b>both</b> firmware packages using Vita3K's <code>File > Install Firmware</code> menu option.</p>
+        there's also an additional firmware package that contains the system fonts that needs to be installed.</p>
+        <p>The font firmware package can be downloaded straight from <a id="systemdata" href="">Sony's servers</a>.</p>
+        <p>Install <b>both</b> firmware packages using Vita3K's <code>File > Install Firmware</code> menu option.</p>
     </div>
 </section>
