--- a/quickstart.html
+++ b/quickstart.html
@@ -29,19 +29,19 @@ texts: compatibility
                 <div class="col-lg-6 d-flex flex-column">
                     <h4 class="my-4"><b>Minimum requirements</b></h4>
                     <div class="row no-gutters reqs">
-                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('../img/icons/opengl.svg') no-repeat center"></div>
+                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('img/icons/opengl.svg') no-repeat center"></div>
                         <div class="col-9 col-sm-10 col-lg-10">
                             <p>GPU that supports OpenGL 4.1 (some games' graphics might be broken)</p>
                         </div>
                     </div>
                     <div class="row no-gutters reqs my-3">
-                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('../img/icons/cpu.svg') no-repeat center"></div>
+                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('img/icons/cpu.svg') no-repeat center"></div>
                         <div class="col-9 col-sm-10 col-lg-10">
                             <p>CPU with the AVX instruction set</p>
                         </div>
                     </div>
                     <div class="row no-gutters reqs">
-                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('../img/icons/ram.svg') no-repeat center"></div>
+                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('img/icons/ram.svg') no-repeat center"></div>
                         <div class="col-9 col-sm-10 col-lg-10">
                             <p>Minimum of 4GB RAM</p>
                         </div>
@@ -50,25 +50,25 @@ texts: compatibility
                 <div class="col-lg-6 d-flex flex-column">
                     <h4 class="my-4"><b>Recommended requirements</b></h4>
                     <div class="row no-gutters reqs">
-                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('../img/icons/opengl.svg') no-repeat center"></div>
+                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('img/icons/opengl.svg') no-repeat center"></div>
                         <div class="col-9 col-sm-10 col-lg-10">
                             <p>GPU that supports OpenGL 4.3 and above</p>
                         </div>
                     </div>
                     <div class="row no-gutters reqs mt-3">
-                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('../img/icons/gpu.svg') no-repeat center"></div>
+                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('img/icons/gpu.svg') no-repeat center"></div>
                         <div class="col-9 col-sm-10 col-lg-10">
                             <p>GPU that supports shader interlock</p>
                         </div>
                     </div>
                     <div class="row no-gutters reqs my-3">
-                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('../img/icons/cpu.svg') no-repeat center"></div>
+                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('img/icons/cpu.svg') no-repeat center"></div>
                         <div class="col-9 col-sm-10 col-lg-10">
                             <p>CPU with the AVX instruction set</p>
                         </div>
                     </div>
                     <div class="row no-gutters reqs">
-                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('../img/icons/ram.svg') no-repeat center"></div>
+                        <div class="col-2 col-sm-1 col-lg-1 mx-2" style="background: url('img/icons/ram.svg') no-repeat center"></div>
                         <div class="col-9 col-sm-10 col-lg-10">
                             <p>8GB of RAM or greater</p>
                         </div>
