--- a/quickstart.html
+++ b/quickstart.html
@@ -83,6 +83,8 @@ texts: compatibility
                     <h4><b>Microsoft Redistributable</b></h4>
                     <p>If you're having trouble running Vita3K and it complains about <code>VCRUNTME140_1.dll was not found</code>, 
                         download and install the <a href="https://www.microsoft.com/en-us/download/details.aspx?id=48145">Visual C++ 2015 Redistributable</a></p>
+                    <h4><b>Operating System</b></h4>
+                    <p>You need to be running a 64-bit operating system in order for Vita3K to work.</p>
                 </div>
             </div>
         </div>
