didn't see this T_T

--- a/quickstart.html
+++ b/quickstart.html
@@ -111,7 +111,7 @@ texts: compatibility
     <div class="container">
         <h1 class="text-center mb-5">Dumping Games</h1>
         <p>Vita3K does <b class="text-danger">not</b> condone piracy, therefore, you are required to dump your own games.</p>
-        <p>Currently, Vita3K only supports maidumps or FAGDec decrypted games or manually decrypted games (Vitamin dumps are not supported).
+        <p>Currently, Vita3K only supports maidumps, FAGDec, or manually decrypted games (Vitamin dumps are not supported).
             The games should be in a .zip or .vpk format if you want to install them from the emulator, or if you prefer to copy them yourself,
             you can drag and drop the game folder in your <code>pref_path/ux0/app</code> folder.</p>
         <p><code>pref_path</code> defaults to:
